deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: html-openshift-app
  labels:
    app: html-openshift-app
spec:
  replicas: 1
  selector:
    app: html-openshift-app
  template:
    metadata:
      labels:
        app: html-openshift-app
    spec:
      containers:
        - name: html-openshift-app
          image: html-openshift-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - html-openshift-app
        from:
          kind: ImageStreamTag
          name: html-openshift-app:latest
