route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: html-openshift-app
  labels:
    app: html-openshift-app
spec:
  to:
    kind: Service
    name: html-openshift-app
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
